# kobo

./: .env.example  .gitignore  FINAL_ARCHITECTURE.md  FINAL_DESCRIPTION.md  MAKEFILE_GUIDE.md  Makefile  README.md  docker-compose.yml
.serena/: project.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agentservice/: Dockerfile  __init__.py  main.py
backend/app/agentservice/api/: __init__.py  router.py
backend/app/agentservice/core/: __init__.py  config.py  logging.py
backend/app/agentservice/services/: __init__.py  agent_runtime.py  chat_service.py  confidence.py
backend/app/api/v1/: actions.py  agents.py  approvals.py  artifacts.py  assistant.py  auth.py  council.py  evidence.py  health.py  integrations.py  metrics.py  projects.py  router.py  search.py  tasks.py  workspaces.py
backend/app/core/: auth.py  config.py  dependencies.py  security.py  store.py
backend/app/domain/: schemas.py
backend/app/services/agents/: confidence.py  council.py  document_generator.py  runtime.py
backend/app/services/assistants/: __init__.py  workspace_assistant.py
backend/app/services/integrations/: github.py  linear.py
backend/app/services/memory/: team_cortex.py
backend/app/services/orchestration/: approval.py  autonomy.py  event_bus.py  orchestrator.py  proactive.py
backend/app/services/retrieval/: file_text.py  hybrid.py
backend/app/services/storage/: __init__.py  minio_store.py
backend/app/workers/: runner.py
backend/prisma/: schema.prisma
backend/tests/: test_api_smoke.py
(+44 files in other folders)
